2002-05-04  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (check_concave): allow undefined gap and
	threshold. Change the meaning of threshold/gap == 0.0.
	(check_concave): skip Stolba concaveness check if we have a knee
	on outer stems.

2002-05-03  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-klef.mf: more twiddling with G clef. Almost straight
	downstroke again. Sigh.

	* lily/dynamic-engraver.cc (acknowledge_grob): center dynamic
	script on note head.

2002-05-02  Han-Wen  <hanwen@cs.uu.nl>

	* lily/slur.cc (add_column): allow slur over rest. 

2002-04-27  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc: move scoring constants out of code

2002-04-25  Han-Wen  <hanwen@cs.uu.nl>

	* mf/feta-nummer.mf: scalability fixes.

	* mf/feta-nummer-code.mf: fixes for 5, 8. 

	* mf/feta-klef.mf: G clef fixes.

2002-04-25  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/ly2dvi.py: Mats' fix.  Try to import pre if available.

	* scripts/lilypond-book.py: %Newline, rather than glue macros
	after \end{verbatim}.

2002-04-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/lilypond-book.itely: 
	* scripts/lilypond-book.py: Add options [no]indent, linewidth and
	noinline.

	* input/mozart-hrn3-defs.ly (startGraceContext): Customize grace init.

	* scm/grob-property-description.scm (beam-space): Junk.

	* lily/beam.cc (space_function): New method.
	(get_interbeam): Call space-function.

	* scm/grob-description.scm (Beam): Initialize space-function with
	Beam::space_function.

	* ly/grace-init.ly (startGraceMusic, stopGraceMusic): Set/revert
	Beam.space-function.  Don't quantise grace beams.

2002-04-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* mf/feta-nummer-code.mf (code): tweaks for three, fixes for 6
	bulb. 

	* Documentation/index.texi: add PDF links.

	* Documentation/user/GNUmakefile (PDF_FILES): add PDF files to website.

	* lily/system-start-delimiter-engraver.cc (acknowledge_grob):
	compare #'glyph as strings. 
